# bevy_mortar_bond

./: .gitignore  CHANGELOG.md  Cargo.toml  readme.md  readme_zh-hans.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: README.md  ci.yml  coverage.yml  update-deps.yml
assets/: Demo.mortar  Demo.mortared  Demo1.mortar  basic.mortar  basic.mortared  branch_interpolation.mortar  branch_interpolation.mortared  control_flow.mortar  control_flow.mortared  demo.mortar  demo.mortared  enum_branch.mortar  enum_branch.mortared  live_example.mortar  master_test.mortar  master_test.mortared  performance_system.mortar  performance_system.mortared  pub.mortar  pub.mortared  simple.mortar  simple.mortared
assets/live/: live_example.mortar  live_example.mortared
bevy_mortar_bond_macros/src/: lib.rs
examples/: dialogue_ui.rs  live_terminal.rs  simple_dialogue.rs
examples/utils/: live_terminal.rs  live_terminal_editor.rs  mod.rs  rogue_sprite.rs  typewriter.rs  ui.rs
scripts/: prefer-develop.sh
src/: asset.rs  audio.rs  binder.rs  debug.rs  dialogue.rs  dialogue_state.rs  eval.rs  events.rs  lib.rs  runtime.rs  system.rs  tests.rs  variable_state.rs
src/bevy_mortar_bond_macros/: Cargo.toml
src/bevy_mortar_bond_macros/src/: lib.rs
src/dialogue/: condition_cache.rs  run_execution.rs  text_events.rs
src/tests/: core_tests.rs  fuzz_tests.rs  line_group_tests.rs
src/tests/core_tests/: dialogue_state_tests.rs  event_tracker_tests.rs  function_and_registry_tests.rs  text_processing_tests.rs  value_and_variable_tests.rs
src/tests/fuzz_tests/: cache_tests.rs  edge_case_tests.rs
