[package]
name = "bevy_mortar_bond"
version = "0.2.1"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/bevy_mortar_bond"
description = "Bevy integration plug-in for mortar language"
exclude = [
    "target/*",
    ".github/*"
]

[dependencies]

bevy = { version = "0.18", features = ["wav", "file_watcher"] }

mortar_compiler = "0.5.0"

serde_json = "1.0"

bevy_mortar_bond_macros = { path = "./src/bevy_mortar_bond_macros" , version = "0.1.0" }

[features]

dev-logs = []
