[package]
name = "bevy_mortar_bond"
version = "0.3.0"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bli-AIk/bevy_mortar_bond"
readme = "readme.md"
description = "Bevy integration plug-in for mortar language"
keywords = ["bevy", "dialogue", "mortar", "scripting", "narrative"]
categories = ["game-development"]
exclude = [
    "target/*",
    ".github/*"
]

[dependencies]

bevy = { version = "0.18", default-features = false, features = [
    "std",
    "bevy_asset",
    "bevy_audio",
    "bevy_log",
    "bevy_text",
    "bevy_ui",
    "reflect_auto_register",
    "wav",
    "file_watcher",
] }

mortar_compiler = "0.5.1"

serde_json = "1.0"

bevy_mortar_bond_macros = { path = "./src/bevy_mortar_bond_macros" , version = "0.1.0" }

[features]

dev-logs = []

[dev-dependencies]
proptest = "1.6"
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "bevy_asset",
    "bevy_audio",
    "bevy_log",
    "bevy_text",
    "bevy_ui",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_mesh",
    "bevy_render",
    "bevy_window",
    "bevy_winit",
    "reflect_auto_register",
    "wav",
    "file_watcher",
    "default_font",
    "x11",
] }
